--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "@mobilabs/shp",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A library for reading Natural Earth's SHP files",
   "main": "index.js",
   "bin": {},
   "scripts": {
     "build": "gulp build",
     "watch": "gulp watch",
-    "app": "gulp connect",
-    "makedist": "gulp makedist",
+    "dev": "gulp rundev",
     "test": "cross-env NODE_ENV=test nyc --reporter=lcov mocha ./test/main.js",
-    "check-coverage": "nyc check-coverage --statements 10 --branches 0 --functions 15 --lines 10",
     "display-coverage": "opener ./coverage/lcov-report/index.html",
+    "check-coverage": "nyc check-coverage --statements 10 --branches 0 --functions 15 --lines 10",
     "report-coverage": "nyc report --reporter=text-lcov | coveralls",
     "report": "nyc report",
+    "makedist": "gulp makedist",
+    "app": "gulp runapp",
     "doc": ""
   },
   "repository": {
@@ -37,23 +38,22 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "coveralls": "^3.0.9",
-    "cross-env": "^6.0.3",
+    "cross-env": "^7.0.2",
     "del": "^5.1.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.19.1",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.7.0",
     "gulp-header": "^2.0.9",
-    "gulp-modulify": "0.0.2",
+    "gulp-modulify": "0.0.4",
     "gulp-replace": "^1.0.0",
     "gulp-uglify-es": "^2.0.0",
-    "husky": "^3.1.0",
-    "jmaps": "^0.4.2",
-    "mocha": "^6.2.2",
+    "husky": "^4.2.3",
+    "mocha": "^7.1.0",
     "nyc": "^15.0.0",
-    "open": "^7.0.0",
+    "open": "^7.0.3",
     "opener": "^1.5.1"
   },
   "publishConfig": {
