Updated the project with the boilerplate ES6Kadoo.

--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@mobilabs/shp",
-  "version": "0.0.4",
+  "version": "0.0.5-beta.1",
   "description": "A library for reading Natural Earth's SHP files",
-  "main": "index.js",
+  "main": "_dist/lib/shp.js",
   "bin": {},
   "scripts": {
     "build": "gulp build",
     "watch": "gulp watch",
     "dev": "gulp rundev",
-    "test": "cross-env NODE_ENV=test nyc --reporter=lcov mocha ./test/main.js",
+    "test": "cross-env NODE_ENV=test nyc --reporter=lcov mocha --require esm ./test/main.js",
     "display-coverage": "opener ./coverage/lcov-report/index.html",
-    "check-coverage": "nyc check-coverage --statements 10 --branches 0 --functions 15 --lines 10",
+    "check-coverage": "nyc check-coverage --statements 5 --branches 0 --functions 0 --lines 5",
     "report-coverage": "nyc report --reporter=text-lcov | coveralls",
     "report": "nyc report",
     "makedist": "gulp makedist",
@@ -43,14 +43,16 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
+    "esm": "^3.2.25",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.7.0",
     "gulp-header": "^2.0.9",
-    "gulp-modulify": "0.0.4",
+    "gulp-modulify": "0.0.5",
     "gulp-replace": "^1.0.0",
     "gulp-uglify-es": "^2.0.0",
     "husky": "^4.2.3",
+    "kadoo": "0.0.0-beta.1",
     "mocha": "^7.1.0",
     "nyc": "^15.0.0",
     "open": "^7.0.3",
