--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mobilabs/shp",
-  "version": "0.0.5-beta.1",
+  "version": "0.0.5",
   "description": "A library for reading Natural Earth's SHP files",
   "main": "_dist/lib/shp.js",
   "bin": {},
