Added the method _load.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@mobilabs/shp",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "A library for reading Natural Earth's SHP files",
   "main": "_dist/lib/shp.js",
-  "minified": "_dist/lib/shp.js",
+  "minified": "_dist/lib/shp.min.js",
   "unpkg": "_dist/lib/shp.mjs",
   "module": "_dist/lib/shp.min.mjs",
   "bin": {},
@@ -13,7 +13,7 @@
     "dev": "gulp rundev",
     "test": "cross-env NODE_ENV=test nyc --reporter=lcov mocha --require esm ./test/main.js",
     "display-coverage": "opener ./coverage/lcov-report/index.html",
-    "check-coverage": "nyc check-coverage --statements 5 --branches 0 --functions 0 --lines 5",
+    "check-coverage": "nyc check-coverage --statements 10 --branches 0 --functions 5 --lines 10",
     "report-coverage": "nyc report --reporter=text-lcov | coveralls",
     "report": "nyc report",
     "makedist": "gulp makedist",
@@ -43,7 +43,7 @@
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
     "del": "^5.1.0",
-    "eslint": "^7.6.0",
+    "eslint": "^7.7.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "esm": "^3.2.25",
@@ -54,10 +54,10 @@
     "gulp-replace": "^1.0.0",
     "gulp-uglify-es": "^2.0.0",
     "husky": "^4.2.5",
-    "kadoo": "0.0.0-beta.6",
+    "kadoo": "0.0.0-beta.7",
     "mocha": "^8.1.1",
     "nyc": "^15.1.0",
-    "open": "^7.1.0",
+    "open": "^7.2.0",
     "opener": "^1.5.1"
   },
   "publishConfig": {
